fixed mask bug (shifty weird) and the bug with using key strokes within short interval

--- a/content_script.css
+++ b/content_script.css
@@ -84,3 +84,25 @@
      background-color: #f0f0f0;
      padding: 7px 13px;
 }
+
+#radpin-load {
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  display: block;
+  opacity: 0.7;
+  
+  z-index: 99;
+  text-align: center;
+  /*visibility: hidden;*/
+}
+
+#radpin-loadimage {
+  position: absolute;
+  top: 100px;
+  left: 240px;
+  z-index: 100;
+}
+
